syntax = "proto3";

package Discussify.Protos;

service IdentityService {
    rpc GetAppUserById (GetAppUserByIdRequest) returns (GetAppUserByIdResponse);
}

message GetAppUserByIdRequest {
    string userId = 1;
}

message GetAppUserByIdResponse {
    string userId = 1;
    string userName = 2;
    string email = 3;
}